<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MovieRaterActivity!</string>
    <string name="app_name">MovieGraph</string>
    <string name="screen_suggest">Suggest</string>
    <string name="screen_pending">Pending</string>
    <string name="screen_watched">Watched</string>
    <string name="screen_all_movies">All Movies</string>
    <string name="screen_main_menu">Main Menu</string>
    <string name="label_send_to">To</string>
    <string name="label_movie_title">Movie Title</string>
    <string name="label_select_mood">Select Mood</string>
    <string name="label_mood">Mood</string>
    <string name="label_date_seen">Date Seen</string>
    <string name="label_tag1">TAG 1</string>
    <string name="label_tag2">TAG 2</string>
    <string name="user">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_login">Login</string>
    <string name="button_signup">Sign Up</string>
    <string name="button_accept">Accept</string>
    <string name="button_delete">Delete</string>
    <string name="button_send">Send!</string>
    <string name="button_save">Save</string>
    <string name="button_must_see">Must See</string>
    <string name="button_recommended">Recommended</string>
    <string name="button_worth_watching">Worth a Watch</string>
    <string name="button_have_not_watched">Haven\'t watched yet</string>
    <string name="button_suggest">Send a Suggestion</string>
    <string name="button_pending">I\'ve not watched…</string>
    <string name="button_watched">I\'ve watched…</string>
    <string name="button_all_movies">All Movies</string>
    <string name="menuitem_add_movie">Add Movie</string>
    <string name="menuitem_send_movie">Send Movie</string>
    <string name="menuitem_delete_movie">Delete Movie</string>
    <string name="confirmTitle">Are You Sure?</string>
    <string name="confirmMessage">This will permanently delete the movie</string>
    <string name="errorButton">OK</string>
    <string name="errorTitle">Movie Name is Required</string>
    <string name="errorMessage">You must enter a movie name</string>


    <string name="menuitem_LogoutItem">Logout</string>
    <string name="errorConfirmation">Confirmation does not match password</string>
    <string name="errorMessage_password_confirmation">Your password and password confirmation must match</string>

    <string name="errorEmail">Email is Required</string>
    <string name="errorMessage_email">You must enter a valid email</string>

    <string name="title">Title</string>
    <string name="new_email">New e-mail</string>
    <string name="todo">TODO</string>



    <string-array name="countries_array">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>American Samoa</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Anguilla</item>
        <item>Antarctica</item>
    </string-array>


</resources>