<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
        >
    <AutoCompleteTextView xmlns:android="http://schemas.android.com/apk/res/android"
                          android:id="@+id/To"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:hint="To"/>

        <EditText
            android:id="@+id/titleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:imeOptions="actionNext"
            android:inputType="textCapWords" >
        </EditText>

        <LinearLayout android:id="@+id/liked_buttons"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content">
            <Button
                    android:id="@+id/must_see"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:text="@string/button_must_see"
                    android:onClick="onFirstMustSee"
                    />

            <Button
                    android:id="@+id/recommended"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:text="@string/button_recommended"
                    android:onClick="onFirstRecommended"
                    />

            <Button
                    android:id="@+id/worth_watching"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:text="@string/button_worth_watching"
                    android:onClick="onFirstWorthWatching"
                    />

        </LinearLayout>

        <EditText
            android:id="@+id/moodEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_mood"
            android:imeOptions="actionNext"
            android:inputType="textCapWords|textAutoComplete" >
        </EditText>

        <EditText
                android:id="@+id/datSeenEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_date_seen"
                android:imeOptions="actionNext"
                android:inputType="textCapWords|textAutoComplete" >
        </EditText>

        <EditText
            android:id="@+id/tag1EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_tag1"
            android:imeOptions="actionNext"
            android:inputType="text" >
        </EditText>

        <EditText
            android:id="@+id/tag2EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_tag2"
            android:imeOptions="actionDone"
            android:inputType="text" >
        </EditText>

        <Button
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/button_send"
            android:textSize="30sp" >
        </Button>

</LinearLayout>