<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/screen_watched"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/button_watched"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:stretchColumns="1" >

        <TableRow
            android:id="@+id/nameTableRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/nameLabelTextView"
                style="@style/MovieLabelTextView"
                android:text="@string/label_movie_title" >
            </TextView>

            <TextView
                android:id="@+id/nameTextView"
                style="@style/MovieTextView" >
            </TextView>
        </TableRow>
    </TableLayout>



    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:stretchColumns="1" >

        <TableRow
            android:id="@+id/genreTableRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/moodLabelTextView"
                style="@style/MovieLabelTextView"
                android:text="@string/label_mood" >
            </TextView>

            <EditText
                android:id="@+id/moodTextView"
                style="@style/MovieTextView" >
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/dateSeenTableRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/dateSeenLabelTextView"
                style="@style/MovieLabelTextView"
                android:text="@string/label_date_seen" >
            </TextView>

            <TextView
                android:id="@+id/dateSeenTextView"
                android:imeOptions="actionNext"
                android:inputType="date"
                style="@style/MovieTextView"
                android:onClick="chooseDate" >
            </TextView>
        </TableRow>

        <TableRow
            android:id="@+id/tag1TableRow"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tag1LabelTextView"
                style="@style/MovieLabelTextView"
                android:text="@string/label_tag1" >
            </TextView>

            <TextView
                android:id="@+id/tag1TextView"
                style="@style/MovieTextView" >
            </TextView>
        </TableRow>

        <TableRow
            android:id="@+id/tag2TableRow"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tag2LabelTextView"
                style="@style/MovieLabelTextView"
                android:text="@string/label_tag2" >
            </TextView>

            <TextView
                android:id="@+id/tag2TextView"
                style="@style/MovieTextView" >
            </TextView>
        </TableRow>

    </TableLayout>
    <LinearLayout android:id="@+id/liked_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/must_see"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:text="@string/button_must_see"
            android:onClick="onMustSeeClick"
            />

        <Button
            android:id="@+id/recommended"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:text="@string/button_recommended"
            android:onClick="onRecommendedClick"
            />

        <Button
            android:id="@+id/worth_watching"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/button_worth_watching"
            android:onClick="onWorthWatchingClick"
            />

    </LinearLayout>

    <Button
        android:id="@+id/haven_not_seen"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:layout_below="@id/liked_buttons"
        android:text="@string/button_have_not_watched"
        android:onClick="onNotSeenClick"
        />
</LinearLayout>