<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="5dp" >

    <TextView
        android:id="@+id/screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="65sp"
        android:text="@string/app_name"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        />

    <ImageView
        android:id="@+id/logo"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        android:src="@drawable/small_logo"
        android:layout_below="@id/screen_title"
        android:layout_marginBottom="40dp"
        />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:textSize="30sp"
        android:hint="@string/user"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:layout_below= "@id/logo"
        >

    </EditText>

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:textSize="30sp"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:layout_below= "@id/username"
        >
    </EditText>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below= "@id/password"
        android:layout_gravity="center"
        >

        <TextView
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/button_login"
            android:textSize="35sp"
            />

        <TextView
            android:id="@+id/button_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/button_signup"
            android:textSize="35sp"
            android:layout_toRightOf="@id/button_login"
            android:layout_below="@id/password"
            android:clickable="true"
            android:onClick="onSignupClick"
            />
    </LinearLayout>
</LinearLayout>