<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|center_vertical"
    android:orientation="vertical" >

    <Button
        android:id="@+id/must_see"
        android:layout_width="195dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:text="@string/button_must_see"
        android:onClick="onRecommendClick"
    />

    <Button
        android:id="@+id/recommended"
        android:layout_width="195dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:text="@string/button_recommended"
        android:onClick="onPendingClick"
    />

    <Button
        android:id="@+id/worth_watching"
        android:layout_width="195dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:text="@string/button_worth_watching"
    />

    <Button
        android:id="@+id/haven_not_seen"
        android:layout_width="195dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:text="@string/button_have_not_seen"
    />

</LinearLayout>